--- a/index-files.html
+++ b/index-files.html
@@ -76,7 +76,7 @@
       <a href="http://10.10.20.253/dashboard/APPS-ROBOT/GITHUB/index-dashboard2.php">  <p class="disclaimer-text">AI ROBOT SYSTEM V80</p>
       </div>
     </div>
-    <script src="script-ai.js"></script>
+    <script src="script-ai-new-2.js"></script>
 
 
 
